--- a/.github/workflows/php-push.yml
+++ b/.github/workflows/php-push.yml
@@ -1,7 +1,7 @@
 name: Publish Docker
-on: 
-  release:
-    types: [published]
+on: push
+#   release:
+#     types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
